# Electric-Pot

./: .gitignore  README.md
backend/: .gitignore  requirements.txt  run.sh
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/static/: app.js  style.css
backend/app/templates/: index.html
esp32-rust/: .gitignore  Cargo.toml  rust-toolchain.toml  sdkconfig.defaults
esp32-rust/.cargo/: config.toml
esp32-rust/src/: config.example.rs  main.rs
